--- a/examples/configs/daikin.toml
+++ b/examples/configs/daikin.toml
@@ -1,5 +1,5 @@
 [Inverter.C0E434E69F27]          # The key is the unpunctuated MAC address of the unit
-  label = "Steve's Office"  # A user-friendly label for the unit
+  label = "Steve's Office"       # A user-friendly label for the unit - must be unique
   
 [Inverter.C0E434E6A3C6]
   label = "Dining Room"
