--- a/examples/configs/network.toml
+++ b/examples/configs/network.toml
@@ -40,3 +40,27 @@
   port = 80
   label = "Brother A3 Printer"
   period = 120
+
+[HostChecker.Deco_Main]
+  host = "192.168.1.40"
+  port = 80
+  label = "Primary Deco M5"
+  period = 60
+
+[HostChecker.Deco_SpareRoom]
+  host = "192.168.1.42"
+  port = 80
+  label = "Deco M5 - Spare Room"
+  period = 60
+
+[HostChecker.Deco_Paul]
+  host = "192.168.1.44"
+  port = 80
+  label = "Deco M5 - Paul's Studio"
+  period = 60
+
+[HostChecker.Deco_Steve]
+  host = "192.168.1.46"
+  port = 80
+  label = "Deco M5 - Steve's Office"
+  period = 60
