--- a/examples/configs/config.toml
+++ b/examples/configs/config.toml
@@ -1,14 +1,15 @@
-systemName = "Our House"
+systemName = "Our House"      # Label for the system
 
-longitude = 43.5
-latitude = 2.0
+longitude = 43.6
+latitude = 2.24
 
-mqttBroker = "mediaserver01"
-mqttPort = 1883
-mqttClientID = "aghast"
+mqttBroker = "mediaserver01"  # Hostname or IP of MQTT Broker
+mqttPort = 1883               # MQTT Broker port
+mqttClientID = "aghast"       # MQTT Client ID
 
-logEvents = false       # A LOT of stuff will be logged if this is true!
+logEvents = false             # A LOT of stuff will be logged if this is true!
 
+# List of Integrations we want enabled
 integrations = [
   "time",
   "network",
