--- a/examples/configs/config.toml
+++ b/examples/configs/config.toml
@@ -7,7 +7,7 @@ mqttBroker = "mediaserver01"  # Hostname or IP of MQTT Broker
 mqttPort = 1883               # MQTT Broker port
 mqttClientID = "aghast"       # MQTT Client ID
 
-logEvents = false             # A LOT of stuff will be logged if this is true!
+logEvents = true             # A LOT of stuff will be logged if this is true!
 
 # List of Integrations we want enabled
 integrations = [
