--- a/examples/configs/daikin.toml
+++ b/examples/configs/daikin.toml
@@ -12,3 +12,13 @@
 
 [Inverter.C0E434E60BA0]
   label = "Master Bedroom"
+
+[Inverter.D8C0A664EDEE]
+  label = "Living Room"
+
+[Inverter.706655B5CD75]
+  label = "Hall"
+
+[Inverter.D8C0A664E830]
+  label = "Music Room"
+  
