--- a/examples/configs/time.toml
+++ b/examples/configs/time.toml
@@ -19,7 +19,7 @@
 [event.Test2]
   time = "16:54:00"
 
-[event.TenBeforeWork]
-  time = "16:39:00"
+# [event.TenBeforeWork]
+#  time = "16:39:00"
   
   
