Add Node-Red flows, update examples, add 0.1s pause to consecutive actions.

--- a/examples/configs/automations/morningOfficeWarmup.toml
+++ b/examples/configs/automations/morningOfficeWarmup.toml
@@ -1,6 +1,6 @@
 name = "MorningOfficeWarmup"
 description = "Warm up the office"
-enabled = true
+enabled = false
 
 [event]
   integration = "Time"
