Implement and doc MQTT events for Automations

--- a/examples/configs/config.toml
+++ b/examples/configs/config.toml
@@ -15,7 +15,7 @@ integrations = [
   "time",         # the Time integration MUST be enabled
   "network",
   "datalogger",
-  "daikin",
+#  "daikin",
   "influx",
   "scraper",
 ]
