--- a/examples/configs/config.toml
+++ b/examples/configs/config.toml
@@ -13,9 +13,10 @@ logEvents = false             # A LOT of stuff will be logged if this is true!
 # List of Integrations we want enabled
 integrations = [
   "time",         # the Time integration MUST be enabled
-  "network",
-  "datalogger",
+#  "network",
+#  "datalogger",
 #  "daikin",
-  "influx",
-  "scraper",
+#  "influx",
+#  "scraper",
+  "tuya",
 ]
