Add Stop() to Integrations, implement reloading of Automations to resolve Issue #4

--- a/examples/configs/config.toml
+++ b/examples/configs/config.toml
@@ -14,7 +14,7 @@ logEvents = false             # A LOT of stuff will be logged if this is true!
 integrations = [
   "time",         # the Time integration MUST be enabled
   "automation",
-  "network",
+#  "network",
 #  "datalogger",
 #  "daikin",
 #  "influx",
