--- a/examples/configs/config.toml
+++ b/examples/configs/config.toml
@@ -10,14 +10,16 @@ mqttClientID = "aghast"       # MQTT Client ID
 
 logEvents = false             # A LOT of stuff will be logged if this is true!
 
+controlPort = 46445           # HTTP port for back-end admin control
+
 # List of Integrations we want enabled
 integrations = [
   "time",         # the Time integration MUST be enabled
   "automation",
-#  "network",
-#  "datalogger",
+  "network",
+  "datalogger",
 #  "daikin",
-#  "influx",
-#  "scraper",
+  "influx",
+  "scraper",
   "tuya",
 ]
