Work on Issue #3

--- a/examples/configs/config.toml
+++ b/examples/configs/config.toml
@@ -15,11 +15,11 @@ controlPort = 46445           # HTTP port for back-end admin control
 # List of Integrations we want enabled
 integrations = [
   "time",         # the Time integration MUST be enabled
-  "automation",
-  "network",
-  "datalogger",
-# "daikin",
-  "influx",
-  "scraper",
+#  "automation",
+#  "network",
+#  "datalogger",
+  "daikin",
+#  "influx",
+#  "scraper",
   "tuya",
 ]
