--- a/examples/configs/config.toml
+++ b/examples/configs/config.toml
@@ -1,25 +1,22 @@
-systemName = "Our House"      # Label for the system
+SystemName = "Our House"      # Label for the system
+Postcode = "!!SECRET(postcode)"
 
-longitude = 43.6
-latitude = "!!SECRET(latitude)"       # Get latitude value from secrets.toml
-postcode = "!!SECRET(postcode)"
+MqttBroker = "!!CONSTANT(mqttBroker)"  # Hostname or IP of MQTT Broker
+MqttPort = 1883               # MQTT Broker port
+MqttClientID = "aghast"       # MQTT Client ID
 
-mqttBroker = "!!CONSTANT(mqttBroker)"  # Hostname or IP of MQTT Broker
-mqttPort = 1883               # MQTT Broker port
-mqttClientID = "aghast"       # MQTT Client ID
+LogEvents = true              # A LOT of stuff will be logged if this is true!
 
-logEvents = true              # A LOT of stuff will be logged if this is true!
-
-controlPort = 46445           # HTTP port for back-end admin control
+ControlPort = 46445           # HTTP port for back-end admin control
 
 # List of Integrations we want enabled
-integrations = [
+Integrations = [
   "time",         # the Time integration MUST be enabled
   "automation",
-  "network",
-  "datalogger",
-  "daikin",
-  "influx",
-  "scraper",
+#  "network",
+#  "datalogger",
+#  "daikin",
+#  "influx",
+#  "scraper",
   "tuya",
 ]
