Fix possible data race and message in loggers.

--- a/examples/configs/influx.toml
+++ b/examples/configs/influx.toml
@@ -8,7 +8,7 @@ URL = "http://localhost:8086"
 [[Logger]]
   Name = "OutsideTemp"
   Integration = "Daikin"
-  DeviceDataType = "Inverter"
+  DeviceType = "Inverter"
   DeviceName = "Hall"         
   EventName = "OutsideTemperature"
   DataType = "float"                    # Either 'float', 'integer', or 'string'
@@ -16,7 +16,7 @@ URL = "http://localhost:8086"
 [[Logger]]
   Name = "HallTemp"
   Integration = "Daikin"
-  DeviceDataType = "Inverter"
+  DeviceType = "Inverter"
   DeviceName = "Hall"           
   EventName = "Temperature"
   DataType = "float"
@@ -24,7 +24,7 @@ URL = "http://localhost:8086"
 [[Logger]]
   Name = "MusicTemp"
   Integration = "Daikin"
-  DeviceDataType = "Inverter"
+  DeviceType = "Inverter"
   DeviceName = "Music Room"           
   EventName = "Temperature"
   DataType = "float"
@@ -32,7 +32,7 @@ URL = "http://localhost:8086"
 [[Logger]]
   Name = "SalonTemp"
   Integration = "Daikin"
-  DeviceDataType = "Inverter"
+  DeviceType = "Inverter"
   DeviceName = "Living Room"           
   EventName = "Temperature"
   DataType = "float"
@@ -40,7 +40,7 @@ URL = "http://localhost:8086"
 [[Logger]]
   Name = "DiningTemp"
   Integration = "Daikin"
-  DeviceDataType = "Inverter"
+  DeviceType = "Inverter"
   DeviceName = "Dining Room"           
   EventName = "Temperature"
   DataType = "float"
@@ -48,7 +48,7 @@ URL = "http://localhost:8086"
 [[Logger]]
   Name = "MasterBedTemp"
   Integration = "Daikin"
-  DeviceDataType = "Inverter"
+  DeviceType = "Inverter"
   DeviceName = "Master Bedroom"           
   EventName = "Temperature"
   DataType = "float"
