--- a/examples/configs/config.toml
+++ b/examples/configs/config.toml
@@ -12,11 +12,11 @@ ControlPort = 46445           # HTTP port for back-end admin control
 # List of Integrations we want enabled
 Integrations = [
   "time",         # the Time integration MUST be enabled
-  "automation",
+# "automation",
 #  "network",
 #  "datalogger",
 #  "daikin",
 #  "influx",
-#  "scraper",
-  "tuya",
+  "scraper",
+#  "tuya",
 ]
