--- a/examples/configs/config.toml
+++ b/examples/configs/config.toml
@@ -3,7 +3,7 @@ Postcode = "!!SECRET(postcode)"
 
 MqttBroker = "!!CONSTANT(mqttBroker)"  # Hostname or IP of MQTT Broker
 MqttPort = 1883               # MQTT Broker port
-MqttClientID = "aghast"       # MQTT Client ID
+MqttClientID = "aghast-DEV"   # MQTT Client ID
 
 LogEvents = true              # A LOT of stuff will be logged if this is true!
 
@@ -12,11 +12,12 @@ ControlPort = 46445           # HTTP port for back-end admin control
 # List of Integrations we want enabled
 Integrations = [
   "time",         # the Time integration MUST be enabled
-  "automation",
+#  "automation",
 #  "network",
 #  "datalogger",
 #  "daikin",
 #  "influx",
+   "pimqttgpio",
 #  "scraper",
 #  "tuya",
 ]
